Switched to simplemodslib registrars for item and block registration. - Fixed portable tank tooltip showing wrong unit. - Code cleanup.